Fixed layout bug + improved styling

--- a/lynheter.css
+++ b/lynheter.css
@@ -1,6 +1,8 @@
 .features {
-    font-size: 10px;
-    line-height: 14px;
+    font-size: 14px;
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 300;
+    line-height: 16px;
     text-align: left;
 }
 
@@ -23,19 +25,10 @@
 }
 
 .feature {
-    border-radius: 25px;
+    border-radius: 6px;
     border: 1px solid rgb(124, 122, 122);
-    padding: 20px;
-    width: 400px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    width: 25%;
   
-}
-
-.currentweather .weathericon,
-.currentweather .fa-home {
-  font-size: 75%;
-  line-height: 65px;
-  display: inline-block;
-  -ms-transform: translate(0, -3px); /* IE 9 */
-  -webkit-transform: translate(0, -3px); /* Safari */
-  transform: translate(0, -3px);
 }
